Issue#17248 Resloved (No Color Overlap)

--- a/static/styles/rendered_markdown.css
+++ b/static/styles/rendered_markdown.css
@@ -138,7 +138,7 @@
     }
 
     .alert-word {
-        background-color: hsla(102, 85%, 57%, 0.5);
+        background-color: #b5f799;
     }
 
     /* Timestamps */
